--- a/templates/get-started.html
+++ b/templates/get-started.html
@@ -25,9 +25,9 @@
   <section class="get-started">
     <div class="container">
       <div class="difficulty-buttons">
-        <a href="#" class="btn btn-difficulty" data-difficulty="easy">Easy</a>
-        <a href="medium" class="btn btn-difficulty" data-difficulty="medium">Medium</a>
-        <a href="#" class="btn btn-difficulty" data-difficulty="hard">Hard</a>
+        <a href="speech" class="btn btn-difficulty" data-difficulty="easy">Speech</a>
+        <a href="debate" class="btn btn-difficulty" data-difficulty="medium">Debate</a>
+        <a href="writing" class="btn btn-difficulty" data-difficulty="hard">Writing</a>
       </div>
     </div>
   </section>
